--- a/contactsApp/package.json
+++ b/contactsApp/package.json
@@ -15,7 +15,8 @@
     "morgan": "~1.10.0",
     "path": "^0.12.7",
     "pug": "^3.0.2",
-    "sanitize-html": "^2.11.0"
+    "sanitize-html": "^2.11.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
